fix: white on white backgrounds on mobile

--- a/src/components/shop/ShopifyProductItem.module.scss
+++ b/src/components/shop/ShopifyProductItem.module.scss
@@ -65,7 +65,7 @@
 
 .description {
   font-size: 0.9em;
-  color: #ffffff;
+  color: #000000;
   margin-bottom: 15px;
   max-height: 100px;
   overflow-y: auto;
@@ -74,7 +74,7 @@
 .price {
   font-size: 1.2em;
   font-weight: bold;
-  color: #ffffff;
+  color: #000000;
   margin: 10px 0;
 }
 
